--- a/www/index.html
+++ b/www/index.html
@@ -444,7 +444,7 @@
                    </p></div>
                </li>
                <li>
-                   <div class="collapsible-header"><i class="material-icons" aria-hidden="true">description</i>EsupNFC</div>
+                   <div class="collapsible-header"><i class="material-icons" aria-hidden="true">description</i>NFC</div>
                    <div class="collapsible-body">
                        <div class="row">
                            <div class="col s12">
