--- a/www/index.html
+++ b/www/index.html
@@ -748,6 +748,21 @@
                     </div>
                 </div>
             </div>
+            <div class="container" v-show="showBottomSheet">
+                <div class="overlay" :class="{ active: showBottomSheet }" v-on:click="hideBottomSheet()"></div> <!-- overlay -->
+                <div id="bottom-sheet" class="bottom-sheet" :class="{ active: showBottomSheet }">
+                    <div class="sheet-header">
+                        <h3>Scannez votre carte NFC</h3>
+                    </div>
+                    <div class="sheet-body">
+                        <p>Placez votre carte sous l'appareil.</p>
+                        <div v-show="showSuccess" class="success-animation">
+                            <i class="material-icons">check_circle</i>
+                            <p>Scan réussi!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
         <footer></footer>
     </div>
