--- a/www/index.html
+++ b/www/index.html
@@ -74,7 +74,7 @@
                             <label>
                                 <input type="checkbox" id="darkModeToggle">
                                 <span class="lever"></span>
-                                Dark
+                                Sombre
                             </label>
                         </div>
                     </div>
@@ -774,10 +774,8 @@
     <script src="js/app.js"></script>
     <script type="text/javascript" src="js/totp.js"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="js/slide.js"></script>
-
 
 </body>
 
